force-app/main/default/objects/Credit_Memo__c/Credit_Memo__c.object-meta.xml
<CustomObject>
    <description>Billing credit record that reduces an Invoice balance. Used for SLA breach penalties, first-month renter waivers, proration adjustments, and goodwill credits. Linked to Invoice__c via Applied_Invoice__c lookup — the Invoice Roll-Up Summary field sums all applied credits automatically.</description>
    <label>Credit Memo</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Credit Memo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>