force-app/main/default/objects/Credit_Memo__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The credit amount. Stored as a positive number — the Invoice Total Amount formula subtracts it (Base_Amount__c - Credit_Applied__c). The Roll-Up Summary on Invoice__c sums this field across all applied Credit Memos.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>