force-app/main/default/objects/Credit_Memo__c/fields/Applied_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Applied_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Invoice this credit reduces. This is the foreign key that drives the Roll-Up Summary field (Credit_Applied__c) on Invoice__c. When populated, the invoice Total Amount recalculates automatically.</description>
    <label>Applied Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>