force-app/main/default/objects/Credit_Memo__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated when this credit was triggered by an SLA breach Case. Creates the Service Cloud → Revenue Cloud audit trail.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>