force-app/main/default/objects/Credit_Memo__c/fields/Credit_Generated__c.field-meta.xml
<CustomField>
    <fullName>Credit_Generated__c</fullName>
    <description>The original calculated credit before any partial application. Useful for audit when Amount__c is reduced due to invoice balance being less than the full credit.</description>
    <label>Credit Generated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>