force-app/main/default/objects/Credit_Memo__c/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <description>Categorizes the credit for reporting. SLA Breach credits are always linked to a Case. First Month Waiver is created by the Match Activation Flow. Proration is created by the Match End Flow.</description>
    <label>Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SLA Breach</fullName>
            </value>
            <value>
                <fullName>First Month Waiver</fullName>
            </value>
            <value>
                <fullName>Goodwill Adjustment</fullName>
            </value>
            <value>
                <fullName>Proration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>