force-app/main/default/objects/Credit_Memo__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Match context for this credit — used for reporting and tracing credits back to their housing arrangement.</description>
    <label>Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>